--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -13,15 +13,15 @@ scheduler:
   # 股票涨停数据定时任务
   stock:
     enabled: false             # 是否启用
-    cron: "0 0 9 * * *"       # 每天 9:00 执行
+    cron: "0 */5 9-16 * * 1-5"  # 交易日 9:16-15:16 每5分钟执行
   # 基础数据定时任务
   base_info:
     enabled: false              # 是否启用
-    cron: "0 15 9 * * *"      # 每天 9:15 执行
+    cron: "0 */5 9-16 * * 1-5"  # 交易日 9:16-15:16 每5分钟执行
   # 涨停数据定时任务
   zt_info:
     enabled: true              # 是否启用
-    cron: "0 */1 * * * *"     # 每分钟执行一次（秒 分 时 日 月 周）
+    cron: "0 */1 9-16 * * 1-5" # 交易日 9:16-15:16 每分钟执行（秒 分 时 日 月 周）
   # 是否启动时立即执行一次
   run_on_start: true
 
