--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -16,7 +16,7 @@ scheduler:
     cron: "0 */5 9-16 * * 1-5"  # 交易日 9:16-15:16 每5分钟执行
   # 基础数据定时任务
   base_info:
-    enabled: false              # 是否启用
+    enabled: true              # 是否启用
     cron: "0 */5 9-16 * * 1-5"  # 交易日 9:16-15:16 每5分钟执行
   # 涨停数据定时任务
   zt_info:
